# text_expander_rs

./: CLAUDE.md  Cargo.toml  SPEC.md  build.rs  expansions.toml  snippet.rs
reference/: memory.md
src/: keyboard_hook.rs  main.rs  windows_input.rs
