[package]
name = "text_expander"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
arboard = "3"
chrono = "0.4.42"
winapi = { version = "0.3", features = ["winuser", "minwindef", "winbase", "memoryapi", "libloaderapi", "shellapi"] }

[build-dependencies]
winres = "0.1"